<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <!-- Model version for Maven POM -->
    <modelVersion>4.0.0</modelVersion>

    <!-- Parent project information -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <!-- Basic project information -->
    <groupId>peppertech.crm</groupId>
    <artifactId>api</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>PepperCRM-API</name>
    <description>PepperCRM-API</description>
    <url/>

    <!-- Licenses for the project -->
    <licenses>
        <license/>
    </licenses>

    <!-- Developers involved in the project -->
    <developers>
        <developer/>
    </developers>

    <!-- Source control management (SCM) configuration -->
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>

    <!-- Global properties -->
    <properties>
        <java.version>17</java.version>
    </properties>

    <!-- Project dependencies -->
    <dependencies>

        <!-- ===================== Spring Boot Dependencies ===================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId> <!-- For monitoring and health checks -->
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId> <!-- For building RESTful web services -->
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId> <!-- For validation support using annotations -->
        </dependency>

        <!-- ===================== Data & Persistence Dependencies ===================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-mongodb</artifactId> <!-- MongoDB integration -->
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId> <!-- Redis integration -->
            <version>3.4.5</version>
        </dependency>

        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId> <!-- Redis client library -->
            <version>6.0.0</version>
        </dependency>

        <!-- ===================== Security Dependencies ===================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security
            </artifactId> <!-- Spring Security for authentication and authorization -->
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId> <!-- Testing utilities for Spring Security -->
            <scope>test</scope> <!-- Available only in test scope -->
        </dependency>

        <!-- ===================== JWT (JSON Web Token) Dependencies ===================== -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt</artifactId>
            <version>0.12.6</version> <!-- JWT core library -->
        </dependency>

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.12.6</version> <!-- JWT implementation -->
        </dependency>

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>0.12.6</version> <!-- JWT support for Jackson (JSON parsing) -->
        </dependency>

        <!-- ===================== Testing Dependencies ===================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId> <!-- Testing utilities for Spring Boot -->
            <scope>test</scope> <!-- Available only in test scope -->
        </dependency>

        <dependency>
            <groupId>org.springframework.restdocs</groupId>
            <artifactId>spring-restdocs-mockmvc</artifactId> <!-- REST Docs for generating API documentation -->
            <scope>test</scope> <!-- Available only in test scope -->
        </dependency>


        <!-- ===================== Development & Tools Dependencies ===================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools
            </artifactId> <!-- Developer tools for faster development (restarts, etc.) -->
            <scope>runtime</scope> <!-- Available only during runtime -->
            <optional>true</optional> <!-- Optional dependency -->
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok
            </artifactId> <!-- Lombok for reducing boilerplate code (getters/setters, constructors, etc.) -->
            <scope>compile</scope> <!-- Available at compile time -->
        </dependency>

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.8.8</version> <!-- OpenAPI support for automatic API documentation -->
        </dependency>

        <dependency>
            <groupId>io.github.cdimascio</groupId>
            <artifactId>dotenv-java</artifactId>
            <version>3.2.0</version> <!-- Load environment variables from a .env file -->
        </dependency>

        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>1.6.3</version> <!-- MapStruct for object mapping -->
        </dependency>

        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
            <version>1.6.3</version> <!-- MapStruct annotation processor -->
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId> <!-- Spring Boot caching support -->
        </dependency>

        <!-- ===================== Mail Dependencies ===================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId> <!-- Spring Boot mail support -->
        </dependency>

        <!-- ===================== Miscellaneous Dependencies ===================== -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId> <!-- Apache Commons Pool for Redis connection management -->
            <version>2.12.1</version>
        </dependency>
    </dependencies>

    <!-- Build configuration -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>1.6.3</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- Profiles for different configurations -->
    <profiles>
        <!-- Profiles for Docker -->
        <profile>
            <id>docker</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-resources-plugin</artifactId>
                        <version>3.3.1</version>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
